--- a/index.html
+++ b/index.html
@@ -1,21 +1,123 @@
 <!DOCTYPE html>
-<html lang=en>
+<html lang="en">
   <head>
-    <meta charset=UTF-8 />
-    <meta http-equiv=X-UA-Compatible content=IE=edge />
-    <meta name=viewport content=width=device-width, initial-scale=1.0 />
-    <meta name=description content=*>
-    <meta name=keywords content=*>
-    <meta name=author content=* />
-    <meta property=og:url content=* />
-    <meta property=og:type content=* />
-    <meta property=og:title content=* />
-    <meta property=og:description content=*/>
-    <meta property=og:image content=* />
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE" ="edge" />
+    <meta
+      name="viewport"
+      content="width"
+      ="device-width,"
+      initial-scale="1.0"
+    />
+    <meta name="description" content="*" />
+    <meta name="keywords" content="*" />
+    <meta name="author" content="*" />
+    <meta property="og:url" content="*" />
+    <meta property="og:type" content="*" />
+    <meta property="og:title" content="*" />
+    <meta property="og:description" content="*" />
+    <meta property="og:image" content="*" />
     <link rel=stylesheet href=/css/style.css />
     <title>GridWarmup</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
-    <p>Hello World!</p>
+    <header class="main_header">
+      <svg
+        class="main_logo"
+        xmlns="http://www.w3.org/2000/svg"
+        viewBox="0 0 1000 1000"
+        xml:space="preserve"
+      >
+        <switch>
+          <g>
+            <circle fill="#382B73" cx="500" cy="500" r="398" />
+            <circle fill="#473080" cx="500" cy="500" r="344.3" />
+            <path
+              fill="#382B73"
+              d="M735.9 592.8c0-20.5-16.6-37.1-37.1-37.1h-13V444.4h-13c-17 0-31.4-11.5-35.8-27.1 4.4-15.7 18.7-27.1 35.8-27.1h13v-75.7h-55.7v-13c0-20.5-16.6-37.1-37.1-37.1s-37.1 16.6-37.1 37.1v13h-55.7v55.7h-.3v-55.7h-55.7v13c0 20.5-16.6 37.1-37.1 37.1S370 348 370 327.5v-13h-55.7v55.7h-13c-20.5 0-37.1 16.6-37.1 37.1 0 3.5.5 6.8 1.4 10-.9 3.2-1.4 6.5-1.4 10 0 20.5 16.6 37.1 37.1 37.1h13V575.7h13c17 0 31.4 11.5 35.8 27.1-4.4 15.7-18.7 27.1-35.8 27.1h-13v75.7H370v13c0 20.5 16.6 37.1 37.1 37.1s37.1-16.6 37.1-37.1v-13h55.7v-55.7h.3v55.7h55.7v-13c0-20.5 16.6-37.1 37.1-37.1s37.1 16.6 37.1 37.1v13h55.7v-55.7h13c20.5 0 37.1-16.6 37.1-37.1 0-3.5-.5-6.8-1.4-10 .9-3.2 1.4-6.6 1.4-10zm-284.6 9.5c0 .2.1.3.1.5s-.1.3-.1.5c0-.2-.1-.3-.1-.5s0-.3.1-.5zm48.6-46.7V464.3h.3V555.6h-.3zm48.8-137.9c0-.2-.1-.3-.1-.5s.1-.3.1-.5c0 .2.1.3.1.5s0 .3-.1.5z"
+            />
+            <g>
+              <path
+                fill="#E7AD27"
+                d="M486.9 555.6h13v-55.7h-55.7v-13c0-20.5-16.6-37.1-37.1-37.1S370 466.4 370 486.9v13h-55.7v55.7h13c20.5 0 37.1 16.6 37.1 37.1s-16.6 37.1-37.1 37.1h-13v55.7H370v13c0 20.5 16.6 37.1 37.1 37.1s37.1-16.6 37.1-37.1v-13h55.7v-55.7h-13c-20.5 0-37.1-16.6-37.1-37.1 0-20.4 16.6-37.1 37.1-37.1z"
+              />
+              <path
+                fill="#00A58C"
+                d="M698.8 555.6h-13v-55.7h-55.7v13c0 20.5-16.6 37.1-37.1 37.1s-37.1-16.6-37.1-37.1v-13h-55.7v55.7h-13c-20.5 0-37.1 16.6-37.1 37.1s16.6 37.1 37.1 37.1h13v55.7h55.7v-13c0-20.5 16.6-37.1 37.1-37.1s37.1 16.6 37.1 37.1v13h55.7v-55.7h13c20.5 0 37.1-16.6 37.1-37.1 0-20.4-16.6-37.1-37.1-37.1z"
+              />
+              <path
+                fill="#D1D3D4"
+                d="M672.9 370.1h13v-55.7h-55.7v-13c0-20.5-16.6-37.1-37.1-37.1S556 280.9 556 301.4v13h-55.7v55.7h13c20.5 0 37.1 16.6 37.1 37.1s-16.6 37.1-37.1 37.1h-13V500H556v13c0 20.5 16.6 37.1 37.1 37.1s37.1-16.6 37.1-37.1v-13h55.7v-55.7h-13c-20.5 0-37.1-16.6-37.1-37.1-.1-20.5 16.5-37.1 37.1-37.1z"
+              />
+              <path
+                fill="#A72973"
+                d="M512.8 370.1h-13v-55.7h-55.7v13c0 20.5-16.6 37.1-37.1 37.1s-37.1-16.6-37.1-37.1v-13h-55.7v55.7h-13c-20.5 0-37.1 16.6-37.1 37.1s16.6 37.1 37.1 37.1h13V500h55.7v-13c0-20.5 16.6-37.1 37.1-37.1s37.1 16.6 37.1 37.1v13h55.7v-55.7h13c20.5 0 37.1-16.6 37.1-37.1.1-20.5-16.5-37.1-37.1-37.1z"
+              />
+              <path
+                fill="#FEDE3A"
+                d="M486.9 535.6h13v-55.7h-55.7v-13c0-20.5-16.6-37.1-37.1-37.1S370 446.4 370 466.9v13h-55.7v55.7h13c20.5 0 37.1 16.6 37.1 37.1s-16.6 37.1-37.1 37.1h-13v55.7H370v13c0 20.5 16.6 37.1 37.1 37.1s37.1-16.6 37.1-37.1v-13h55.7v-55.7h-13c-20.5 0-37.1-16.6-37.1-37.1 0-20.4 16.6-37.1 37.1-37.1z"
+              />
+              <path
+                fill="#2DBBA5"
+                d="M698.8 535.6h-13v-55.7h-55.7v13c0 20.5-16.6 37.1-37.1 37.1s-37.1-16.6-37.1-37.1v-13h-55.7v55.7h-13c-20.5 0-37.1 16.6-37.1 37.1s16.6 37.1 37.1 37.1h13v55.7h55.7v-13c0-20.5 16.6-37.1 37.1-37.1s37.1 16.6 37.1 37.1v13h55.7v-55.7h13c20.5 0 37.1-16.6 37.1-37.1 0-20.4-16.6-37.1-37.1-37.1z"
+              />
+              <path
+                fill="#FFF"
+                d="M672.9 350.1h13v-55.7h-55.7v-13c0-20.5-16.6-37.1-37.1-37.1S556 260.9 556 281.4v13h-55.7v55.7h13c20.5 0 37.1 16.6 37.1 37.1s-16.6 37.1-37.1 37.1h-13V480H556v13c0 20.5 16.6 37.1 37.1 37.1s37.1-16.6 37.1-37.1v-13h55.7v-55.7h-13c-20.5 0-37.1-16.6-37.1-37.1-.1-20.5 16.5-37.1 37.1-37.1z"
+              />
+              <path
+                fill="#EF5A9D"
+                d="M512.8 350.1h-13v-55.7h-55.7v13c0 20.5-16.6 37.1-37.1 37.1s-37.1-16.6-37.1-37.1v-13h-55.7v55.7h-13c-20.5 0-37.1 16.6-37.1 37.1s16.6 37.1 37.1 37.1h13V480h55.7v-13c0-20.5 16.6-37.1 37.1-37.1s37.1 16.6 37.1 37.1v13h55.7v-55.7h13c20.5 0 37.1-16.6 37.1-37.1.1-20.5-16.5-37.1-37.1-37.1z"
+              />
+            </g>
+          </g>
+        </switch>
+      </svg>
+      <nav class="main_nav">
+        <a href="#">HOME</a>
+        <a href="#">ABOUT</a>
+        <a href="#">JOIN</a>
+      </nav>
+    </header>
+    <main class="main_main">
+      <section class="section_one">
+        <img src="/images/burger1.png" alt="Image of burger" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, velit
+          et, quod ipsum eaque in modi fugiat unde vitae aspernatur neque
+          exercitationem fuga itaque harum dolorem quo, animi laboriosam
+          obcaecati?
+        </p>
+      </section>
+      <section class="section_two">
+        <img src="/images/burger2.png" alt="Image of burger" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, velit
+          et, quod ipsum eaque in modi fugiat unde vitae aspernatur neque
+          exercitationem fuga itaque harum dolorem quo, animi laboriosam
+          obcaecati?
+        </p>
+      </section>
+      <section class="section_three">
+        <img src="/images/burger3.png" alt="Image of burger" />
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Vero, velit
+          et, quod ipsum eaque in modi fugiat unde vitae aspernatur neque
+          exercitationem fuga itaque harum dolorem quo, animi laboriosam
+          obcaecati?
+        </p>
+      </section>
+    </main>
+    <footer class="main_footer">
+      <a href="#">PRIVACY</a>
+      <a href="#">NEWSLETTER</a>
+      <a href="#">SIGN UP</a>
+    </footer>
   </body>
 </html>
