added a new font

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Bakbak+One&family=Poppins&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -436,7 +436,7 @@
       <nav class="main_nav">
         <a href="#">HOME</a>
         <a href="#">ABOUT</a>
-        <a href="#">JOIN</a>
+        <a href="#">TAKEOUT</a>
       </nav>
     </header>
     <main class="main_main">
@@ -471,7 +471,7 @@
     <footer class="main_footer">
       <a href="#">PRIVACY</a>
       <a href="#">NEWSLETTER</a>
-      <a href="#">SIGN UP</a>
+      <a href="#">CAREERS</a>
     </footer>
   </body>
 </html>
